--- a/App.css
+++ b/App.css
@@ -24,6 +24,7 @@
   position: absolute;
   top: 3px;
   left: 202px;
+  width: 80px;
   font-size: 18px;
   z-index: 4;
 }
@@ -142,6 +143,7 @@
   position: absolute;
   display: block;
   margin: 20px auto;
+  padding: 2.5px 5px;
   font-size: 16px;
   border-radius: 60%;
   border: none;
